# wpilib-hal

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.rs
headers/: halwrapper.h
headers/HAL/: Accelerometer.h  AnalogAccumulator.h  AnalogGyro.h  AnalogInput.h  AnalogOutput.h  AnalogTrigger.h  CAN.h  ChipObject.h  Compressor.h  Counter.h  DIO.h  DriverStation.h  Encoder.h  HAL.h  Interrupts.h  Notifier.h  OSSerialPort.h  PDP.h  PWM.h  Power.h  Relay.h  SPI.h  Solenoid.h  Threads.h  foo.h  halwrapper.h
src/: error.rs  lib.rs  log.rs  pid.rs  raw.rs
src/hal/: accelerometer.rs  accumulator.rs  analog.rs  analog_gyro.rs  analog_input.rs  analog_output.rs  analog_trigger.rs  can.rs  compressor.rs  counter.rs  dio.rs  driverstation.rs  encoder.rs  enums.rs  error.rs  halio.rs  handle.rs  i2c.rs  interrupt.rs  joystick.rs  mod.rs  notifier.rs  pdp.rs  ports.rs  power.rs  pwm.rs  relay.rs  serial.rs  serial_io.rs  solenoid.rs  spi.rs  structs.rs  types.rs  usage_reporting.rs  wrapper.rs
