[package]
name = "wpilib-hal"
version = "0.1.1"
authors = ["XavilPergis <max.duzen@gmail.com>"]
build = "build.rs"

description = "Low-level bindings to WPILib's HAL. DO NOT USE THIS YET. THIS IS JUST TO SECURE THE NAME."
repository = "https://github.com/XavilPergis/wpilib-hal"
readme = "./README.md"

keywords = ["WPILib", "FRC", "HAL", "robotics", "FIRST"]
categories = ["external-ffi-bindings"]
license = "MIT"

[dependencies]
# Any version of clippy should work
clippy = { version = "*", optional = true }
time = "0.1.*"
lazy_static = "0.2.*"

[build-dependencies]
bindgen = "0.22.0"
